# AdventOfCode2023

./: README.md
day-9-frege/: Mirage.fr  Mirage1.fr  PROBLEM  results.txt
day1-python/: README.md  calibsum.py  wordedcalibsum.py
day2-emacs-lisp/: README.md  minimal-power.el  possible-games.el
day4-haskell/: Main.hs  README.md  wining-cards.cabal
day5-nim/: README.md  lowestLocation.nim  lowestLocationOneByOne.nim  results.txt
day7-java/: README.md
day7-java/src/: App.java  AppTest.java  CamelApp.java  CamelAppTest.java  Hand.java  HandTest.java  JokerHand.java  JokerHandTest.java
