cabal-version:      2.4
name:               wining-cards
version:            0.1.0.0
synopsis:           Advent Of Code - Day 4
license:            MIT
author:             halloleo
extra-source-files: README.md

executable winning-cards
    main-is:          Main.hs
    build-depends:    base 
                     ,split
    hs-source-dirs:   .
    default-language: Haskell2010
